--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio</title>
-    <link rel="stylesheet" href="./Porfolio.css">
-    <link href="./css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../stylesheets/Porfolio.css">
+    <script src="https://kit.fontawesome.com/337109b71e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Oxygen&family=Oxygen+Mono&display=swap"
         rel="stylesheet">
 </head>
@@ -17,14 +17,14 @@
         <ul>
             <li>
                 <h1>
-                    <a href="Porfolio.html">
+                    <a href="/">
                         <span class="fa-solid fa-code" aria-hidden="true"></span>
                         <span> Brayden Ball</span>
                     </a>
                 </h1>
             </li>
-            <li><a href="Porfolio.html#projects">Projects</a></li>
-            <li><a href="Porfolio.html#contact">Contact</a></li>
+            <li><a href="/#projects">Projects</a></li>
+            <li><a href="/#contact">Contact</a></li>
             <li><a href="https://www.linkedin.com/in/brayden-ball-98728b218/" target="_blank"><span
                         class="fa-brands fa-linkedin" aria-hidden="true"></span><span class="sr-only">
                         Linkedin</span></a>
