--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
         <h1>
           <a href="/">
             <span class="fa-solid fa-code" aria-hidden="true"></span>
-            <span> Brayden Ball Test</span>
+            <span> Brayden Ball</span>
           </a>
         </h1>
       </li>
